# ChangeLog for mail-mta/postfix
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/mail-mta/cvs-repo/gentoo-x86/mail-mta/postfix/ChangeLog,v 1.81 2005/10/11 02:16:31 langthang Exp $

*postfix-2.2.5 (11 Oct 2005)

  11 Oct 2005; Tuấn Văn <langthang@gentoo.org> +files/postfix.rc6.2.2.5,
  +postfix-2.2.5.ebuild:
  bump to postfix-2.2.5 without mailer eclass.
  remove -ldl as it is not necessary, resolve bug #106446.
  change "need net" to "use net", resolve bug #96850.

  11 Oct 2005; Tuấn Văn <langthang@gentoo.org> -files/postfix.rc6.2.2.3,
  -postfix-2.2.1.ebuild, -postfix-2.2.1-r1.ebuild, -postfix-2.2.2.ebuild,
  -postfix-2.2.2-r1.ebuild, -postfix-2.2.2-r2.ebuild, -postfix-2.2.3.ebuild,
  -postfix-2.2.3-r1.ebuild:
  tidy up.

  04 Oct 2005; MATSUU Takuto <matsuu@gentoo.org> postfix-2.1.5-r2.ebuild:
  Stable on sh.

  23 Aug 2005; Andrej Kacian <ticho@gentoo.org> postfix-2.2.1.ebuild,
  postfix-2.2.1-r1.ebuild, postfix-2.2.2.ebuild, postfix-2.2.2-r1.ebuild,
  postfix-2.2.2-r2.ebuild, postfix-2.2.3.ebuild, postfix-2.2.3-r1.ebuild,
  postfix-2.2.4.ebuild:
  Use -1 for shell argument to enewuser. Bug #103421.

  05 Jul 2005; Andrej Kacian <ticho@gentoo.org> postfix-2.2.3-r1.ebuild,
  postfix-2.2.4.ebuild:
  Update 2.2.4 with latest mailer-config stuff (rmail binary). Bug #97589.

  04 Jul 2005; Andrej Kacian <ticho@gentoo.org> files/mailer.conf,
  postfix-2.2.3-r1.ebuild:
  Handle rmail binary.

  04 Jul 2005; Andrej Kacian <ticho@gentoo.org> postfix-2.2.3-r1.ebuild:
  Added compatibility with mailer-config-0.2 - manpages. Bug #97589.

*postfix-2.2.4 (29 Jun 2005)

  29 Jun 2005; Tuấn Văn <langthang@gentoo.org> +postfix-2.2.4.ebuild:
  Vesion bump with some cleanup.
  We're no longer run postconf to change the default alias_maps, 
  alias_database, local_destination_concurrency_limit, 
  default_destination_concurrency_limit to resolve issues in bug #96016.