@@ -1,0 +1,2 @@
+MD5 22c12038d355e104856a02cfcf8a31d9 postfix-2.2.5-vda.patch.gz 7744
+MD5 9c13d58494c64012bfd8ab0d6967305c postfix-2.2.5.tar.gz 2428594
