@@ -1,6 +1,11 @@
 # ChangeLog for mail-mta/postfix
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-mta/cvs-repo/gentoo-x86/mail-mta/postfix/ChangeLog,v 1.81 2005/10/11 02:16:31 langthang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-mta/cvs-repo/gentoo-x86/mail-mta/postfix/ChangeLog,v 1.82 2005/10/11 02:20:28 langthang Exp $
+
+*postfix-2.2.5-r1 (11 Oct 2005)
+
+  11 Oct 2005; Tuấn Văn <langthang@gentoo.org> +postfix-2.2.5-r1.ebuild:
+  mailwrapper/mailer-config ebuild.
 
 *postfix-2.2.5 (11 Oct 2005)
 
